# UVVisResearch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: README.md  api_reference.md  configuration.md  examples.md  installation.md  quickstart.md
examples/: compare_synthetic.py  comprehensive_example.py  evaluation_example.py  nir_multi_model_cv_example.py  nir_regression_example.py  regression_example.py  regression_single_target_example.py
uvvislib/: __init__.py
uvvislib/data/: loader.py  preprocessing.py
uvvislib/evaluation/: __init__.py  cross_validation.py  metrics.py
uvvislib/generative/: __init__.py  adasyn.py  base.py  cgan.py  evaluation.py  noise.py  smote.py
uvvislib/models/: __init__.py  base.py  clustering.py  cnn.py  cnn_mlp.py  mlp.py  random_forest.py
uvvislib/persistence/: __init__.py  data_persistence.py  experiment_manager.py  model_manager.py
uvvislib/utils/: config.py  early_stopping.py  logging.py
uvvislib/visualization/: __init__.py  plots.py
